--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://sachin:kumar@airbnb.48epv.mongodb.net/clinic?retryWrites=true&w=majority&appName=airbnb
+const BOT_TOKEN = '8118003020:AAEWUefEQX9yVMllHpGHJ_3ytTfPcT2zoII';
+const CHAT_ID = '1451583172';
